# IPFS-boot

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.pin  Dockerfile.wasm  FAQ.md  PIN.md  README.md  example.env  justfile
.github/workflows/: run.yml
javascript/: .npmignore  bin.md  index.html  package-lock.json  package.json
javascript/assets/: README.md  nitro_wasm.js  nitro_wasm.wasm  style.css
javascript/src/: .npmignore  attest.js  bin.js  fetch.js  index.js  storage.js  sw.js  view.js
javascript/test/: test.js
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: main.rs
