[package]
name = "nitro_wasm"
edition = "2021"
version = "1.0.0"

[dependencies]
# wasm-bindgen = "0.2"
aws-nitro-enclaves-nsm-api = { version = "0.4.0", default-features = false }
aws-nitro-enclaves-cose = { version = "0.5.2" }
openssl = { version = "0.10.68", features = ["vendored"] }
ciborium = "0.2.2"
serde_bytes = "0.11.15"
sha2 = "0.10.8"
hex = "0.4.3"
